--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,45 @@
 version: '3.8'
 
 services:
+  gateway:
+    image: nginx:alpine
+    platform: linux/amd64 
+    container_name: glossary_gateway
+    ports:
+      - "3000:80"
+      - "50051:50051"
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
+      - grpc
+
   api:
     image: satsuro/glossary-grpc-backend:latest
+    platform: linux/amd64 
     container_name: glossary_rest
-    ports:
-      - "8000:8000"
     volumes:
       - ./backend/glossary.json:/app/glossary.json
     restart: always
 
   grpc:
     image: satsuro/glossary-grpc-backend:latest
+    platform: linux/amd64 
     container_name: glossary_grpc
     command: python grpc_server.py
-    ports:
-      - "50051:50051"
     volumes:
       - ./backend/glossary.json:/app/glossary.json
     restart: always
 
   web:
     image: satsuro/glossary-grpc-frontend:latest
+    platform: linux/amd64 
     container_name: glossary_frontend
     ports:
       - "3000:80"
+      - "50051:50051"
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - api
     restart: always
