--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,4 +13,23 @@ server {
         expires max;
         add_header Cache-Control "public, must-revalidate, proxy-revalidate";
     }
+
+    location /api/ {
+        rewrite ^/api/(.*) /$1 break;
+
+        proxy_pass http://api:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+}
+
+server {
+    listen 50051 http2;
+    server_name localhost;
+
+    location / {
+        grpc_pass grpc://grpc:50051;
+        grpc_set_header Host $host;
+        grpc_set_header X-Real-IP $remote_addr;
+    }
 }
